updated empty message for requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,1 @@
-co# Do not edit this. Any changes will be overwritten during deploy.
+# Do not edit this. Any changes will be overwritten during deploy.
