--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
       - checkout
       - run:
           name: Add plotly remote
-          command: git remote add gallery https://dash-playground.plotly.host/GIT/$CIRCLE_BRANCH
+          command: git remote add playground https://dash-playground.plotly.host/GIT/$CIRCLE_BRANCH
       - run:
           name: Create helper-script
           command: printf '#!/bin/bash\necho username=$PLAYGROUND_DEPLOY_USERNAME\necho password=$PLAYGROUND_DEPLOY_PASSWORD' >> /home/circleci/helper-script.sh
@@ -33,7 +33,7 @@ jobs:
           command: git config credential.helper "/bin/bash /home/circleci/helper-script.sh"
       - run:
           name: Deploy
-          command: git push gallery $CIRCLE_BRANCH:master --force
+          command: git push playground $CIRCLE_BRANCH:master --force
   deploy_to_gallery:
     docker:
       - image: circleci/python:3.6-stretch
