--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,7 @@ jobs:
       - run:
           name: Deploy
           command: |
-            APPS_MODIFIED=$(git diff origin/production origin/master --dirstat=files,1 | awk '{ $2 ~ /apps/; split($2,a,"/"); if (length(a[2]) != 0) { print a[2]} }')
+            APPS_MODIFIED=$(git diff origin/production origin/master --dirstat=files,1 apps/ | awk '{ $2 ~ /apps/; split($2,a,"/"); if (length(a[2]) != 0) { print a[2]} }')
             for APP in $APPS_MODIFIED
             do
               git remote add $APP https://dash-gallery.plotly.host/GIT/$APP
