--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,26 @@ jobs:
           command: git config credential.helper "/bin/bash /home/circleci/helper-script.sh"
       - run:
           name: Deploy
-          command: git push playground $CIRCLE_BRANCH:master --force
+          command: |
+            APPS_MODIFIED=$(git diff origin/master origin/$CIRCLE_BRANCH --dirstat=files,1 apps/ | awk '{ split($2,a,"/"); if (length(a[2]) != 0) { print a[2]} }')
+            if [ -z "$APPS_MODIFIED" ]
+            then
+                  echo "No app change detected. Skipping the deploy.."
+                  exit 0
+            fi
+
+            for APP in $APPS_MODIFIED
+            do
+              if [ "$APP" == "$CIRCLE_BRANCH" ] 
+              then
+                git push playground $CIRCLE_BRANCH:master --force
+                exit 0
+              else
+                echo "appname: $APP is not same as the branchname: $CIRCLE_BRANCH. Not deploying..."
+              fi
+            done
+            echo "Deploy failed because of a branchname/appname mismatch. Exiting..."
+            exit 1
   deploy_to_gallery:
     docker:
       - image: circleci/python:3.6-stretch
