--- a/apps/dash-datashader/requirements.txt
+++ b/apps/dash-datashader/requirements.txt
@@ -1,8 +1,7 @@
-cloudpickle
+cloudpickle>=1.1.1
 dash>=0.42.0
 dask>=0.17.1
 datashader>=0.6.9
-gunicorn
+gunicorn>=19.9.0
 numpy>=1.14.1
 pandas>=0.24.0
-xarray>=0.10.1
