--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,10 @@ jobs:
                   cp ~/dash-sample-apps/apps/"$APP"/Aptfile ~/dash-sample-apps/
                   cp ~/dash-sample-apps/apps/"$APP"/Procfile ~/dash-sample-apps/
                   cp ~/dash-sample-apps/apps/"$APP"/.buildpacks ~/dash-sample-apps/
+                  # app.json tries to call python predeploy, which is not needed for R apps:
                   rm ~/dash-sample-apps/app.json
+                  git config --global user.email '<>' # Leave email blank
+                  git config --global user.name "Circle MonoRepo Automatic Deployer"
                   git add . && git commit -a -m "Deployed commit: $CIRCLE_SHA1"
                 fi
                 git push playground $CIRCLE_BRANCH:master --force
