--- a/apps/dash-web-trader/requirements.txt
+++ b/apps/dash-web-trader/requirements.txt
@@ -1,29 +1,4 @@
-certifi==2018.4.16
-chardet==3.0.4
-click==6.7
-dash==0.26.0
-dash-core-components==0.27.1
-dash-html-components==0.11.0
-dash-renderer==0.13.0
-decorator==4.3.0
-Flask==1.0.2
-Flask-Compress==1.4.0
-gunicorn==19.9.0
-idna==2.7
-ipython-genutils==0.2.0
-itsdangerous==0.24
-Jinja2==2.10
-jsonschema==2.6.0
-jupyter-core==4.4.0
-MarkupSafe==1.0
-nbformat==4.4.0
-plotly==3.1.0
-pytz==2018.5
-requests==2.19.1
-retrying==1.3.3
-six==1.11.0
-traitlets==4.3.2
-urllib3==1.23
-Werkzeug==0.14.1
-numpy==1.16.3
-pandas==0.24.2
+dash
+requests
+pandas
+flask
