--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,6 +60,8 @@ jobs:
                   git config --global user.name "Circle MonoRepo Automatic Deployer"
                   git add . && git commit -a -m "Deployed commit: $CIRCLE_SHA1"
                 fi
+                git add ga_code.txt
+                git commit -m "Add GA code"
                 git push playground $CIRCLE_BRANCH:master --force
                 exit 0
               else
