reqs stripped + logo resized

--- a/apps/dash-salesforce-crm/requirements.txt
+++ b/apps/dash-salesforce-crm/requirements.txt
@@ -1,32 +1,9 @@
-certifi
-chardet
-click
-dash
-dash-core-components
-dash-html-components
-dash-renderer
-decorator
-Flask
-Flask-Compress
-gunicorn
-idna
-ipython-genutils
-itsdangerous
-Jinja2
-jsonschema
-jupyter-core
-MarkupSafe
-nbformat
-plotly
-pytz
-requests
-retrying
-six
-traitlets
-urllib3
-Werkzeug
-numpy
-pandas
-simple-salesforce
-dash-table-experiments
-python-dotenv
+certifi==2019.6.16
+simple_salesforce==0.74.2
+pandas==0.24.2
+dash_html_components==1.0.0
+dash==1.0.0
+dash_core_components==1.0.0
+Flask==1.0.3
+plotly==3.10.0
+python-dotenv==0.10.3
