--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,13 +49,7 @@ jobs:
                 git config --global user.name "Circle MonoRepo Automatic Deployer"
                 if [[ $APP =~ "dashr" ]]
                 then
-                  cp ~/dash-sample-apps/apps/"$APP"/Aptfile ~/dash-sample-apps/
-                  cp ~/dash-sample-apps/apps/"$APP"/Procfile ~/dash-sample-apps/
-                  cp ~/dash-sample-apps/apps/"$APP"/.buildpacks ~/dash-sample-apps/
-                  cp ~/dash-sample-apps/apps/"$APP"/init.R ~/dash-sample-apps/
-                  # app.json tries to call python predeploy, which is not needed for R apps:
-                  rm ~/dash-sample-apps/app.json
-                  git add . && git commit -a -m "Deployed commit: $CIRCLE_SHA1"
+                  continue
                 fi
                 if [ ! -d ~/dash-sample-apps/apps/"$APP"/assets/ ]
                 then
@@ -93,6 +87,10 @@ jobs:
             APPS_MODIFIED=$(git diff origin/production origin/master --dirstat=files,1 apps/ | awk '{ split($2,a,"/"); if (length(a[2]) != 0) { print a[2]} }' | sort -u)
             for APP in $APPS_MODIFIED
             do
+              if [[ $APP =~ "dashr" ]]
+              then
+                continue
+              fi
               git config --global user.email '<>' # Leave email blank
               git config --global user.name "Circle MonoRepo Automatic Deployer"
               echo $PLOTLY_GA_CODE > ~/dash-sample-apps/apps/"$APP"/assets/plotly_ga.js
