update dash 1.0.0 and added stylesheet to assets folder

--- a/apps/dash-ocean-optics/requirements.txt
+++ b/apps/dash-ocean-optics/requirements.txt
@@ -1,7 +1,4 @@
-dash==0.36.0
-dash-html-components==0.13.4
-dash-core-components==0.42.1
-dash-renderer==0.17.0
-dash-daq==0.1.4
-gunicorn>=19.7.1
-numpy
+dash==1.0.0
+dash-daq==0.1.5
+gunicorn==19.9.0
+numpy==1.16.4
