--- a/apps/dash-daq-iv-tracer/requirements.txt
+++ b/apps/dash-daq-iv-tracer/requirements.txt
@@ -1,6 +1,6 @@
-dash>=1.0.0
-gunicorn>=19.8.1
-numpy>=1.16.1
+dash==1.0.0
+gunicorn==19.8.1
+numpy==1.16.1
 dash_daq==0.1.4
-pyserial>=3.4
-pyvisa>=1.9.1
+pyserial==3.4
+pyvisa==1.9.1
