--- a/apps/dash-nlp/requirements.txt
+++ b/apps/dash-nlp/requirements.txt
@@ -1,7 +1,9 @@
+appdirs==1.4.3
 appnope==0.1.0
 atomicwrites==1.3.0
 attrs==19.1.0
 backcall==0.1.0
+black==19.3b0
 bleach==3.1.0
 blis==0.2.4
 boto==2.49.0
@@ -13,14 +15,15 @@ Click==7.0
 cycler==0.10.0
 cymem==2.0.2
 dash==1.2.0
+dash-bootstrap-components==0.7.1
 dash-core-components==1.1.2
-dash-daq==0.1.0
 dash-html-components==1.0.1
 dash-renderer==1.0.1
 dash-table==4.2.0
 decorator==4.4.0
 defusedxml==0.6.0
 docutils==0.15.2
+en-core-web-sm==2.1.0
 entrypoints==0.3
 Flask==1.1.1
 Flask-Compress==1.4.0
@@ -40,14 +43,11 @@ jedi==0.15.1
 Jinja2==2.10.1
 jmespath==0.9.4
 joblib==0.13.2
-json5==0.8.5
 jsonschema==3.0.2
 jupyter==1.0.0
 jupyter-client==5.3.1
 jupyter-console==6.0.0
 jupyter-core==4.5.0
-jupyterlab==1.0.9
-jupyterlab-server==1.0.6
 kiwisolver==1.1.0
 MarkupSafe==1.1.1
 matplotlib==3.1.1
@@ -82,7 +82,6 @@ pyrsistent==0.15.4
 pytest==5.1.2
 python-dateutil==2.8.0
 pytz==2019.2
-PyYAML==5.1.2
 pyzmq==18.1.0
 qtconsole==4.5.5
 requests==2.22.0
@@ -95,11 +94,11 @@ six==1.12.0
 sklearn==0.0
 smart-open==1.8.4
 spacy==2.1.8
-https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.1.0/en_core_web_sm-2.1.0.tar.gz#egg=en_core_web_sm==2.1.0
 srsly==0.1.0
 terminado==0.8.2
 testpath==0.4.2
 thinc==7.0.8
+toml==0.10.0
 tornado==6.0.3
 tqdm==4.35.0
 traitlets==4.3.2
@@ -111,3 +110,4 @@ Werkzeug==0.15.5
 widgetsnbextension==3.5.1
 wordcloud==1.5.0
 zipp==0.6.0
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.1.0/en_core_web_sm-2.1.0.tar.gz#egg=en_core_web_sm==2.1.0
