Use second revision of the image (tag: 2)

--- a/apps/dash-mapd-demo/docker/deployment/omnisci-deployment.yml
+++ b/apps/dash-mapd-demo/docker/deployment/omnisci-deployment.yml
@@ -12,7 +12,7 @@ spec:
         name: omnisci-node
     spec:
       containers:
-      - image: gcr.io/plotly-hosting/omnisci_db
+      - image: gcr.io/plotly-hosting/omnisci_db:2
         name: omnisci-node
         ports:
         - containerPort: 6274
