--- a/apps/dash-mapd-demo/docker/deployment/omnisci-deployment.yml
+++ b/apps/dash-mapd-demo/docker/deployment/omnisci-deployment.yml
@@ -14,6 +14,7 @@ spec:
       containers:
       - image: gcr.io/plotly-hosting/omnisci_db:2
         name: omnisci-node
+        imagePullPolicy: Always
         ports:
         - containerPort: 6274
 
