--- a/apps/dash-nlp/requirements.txt
+++ b/apps/dash-nlp/requirements.txt
@@ -1,5 +1,6 @@
 appdirs==1.4.3
 appnope==0.1.0
+astroid==2.3.2
 atomicwrites==1.3.0
 attrs==19.1.0
 backcall==0.1.0
@@ -14,15 +15,17 @@ chardet==3.0.4
 Click==7.0
 cycler==0.10.0
 cymem==2.0.2
-dash==1.2.0
+dash==1.4.1
 dash-bootstrap-components==0.7.1
-dash-core-components==1.1.2
+dash-core-components==1.3.1
+dash-daq==0.1.0
 dash-html-components==1.0.1
-dash-renderer==1.0.1
-dash-table==4.2.0
+dash-renderer==1.1.2
+dash-table==4.4.1
 decorator==4.4.0
 defusedxml==0.6.0
 docutils==0.15.2
+en-core-web-sm==2.1.0
 entrypoints==0.3
 Flask==1.1.1
 Flask-Compress==1.4.0
@@ -37,19 +40,25 @@ ipykernel==5.1.2
 ipython==7.8.0
 ipython-genutils==0.2.0
 ipywidgets==7.5.1
+isort==4.3.21
 itsdangerous==1.1.0
 jedi==0.15.1
 Jinja2==2.10.1
 jmespath==0.9.4
 joblib==0.13.2
+json5==0.8.5
 jsonschema==3.0.2
 jupyter==1.0.0
 jupyter-client==5.3.1
 jupyter-console==6.0.0
 jupyter-core==4.5.0
+jupyterlab==1.0.9
+jupyterlab-server==1.0.6
 kiwisolver==1.1.0
+lazy-object-proxy==1.4.2
 MarkupSafe==1.1.1
 matplotlib==3.1.1
+mccabe==0.6.1
 mistune==0.8.4
 more-itertools==7.2.0
 murmurhash==1.0.2
@@ -67,7 +76,7 @@ pexpect==4.7.0
 pickleshare==0.7.5
 Pillow==6.1.0
 plac==0.9.6
-plotly==4.1.1
+plotly==4.2.0
 pluggy==0.12.0
 preshed==2.0.1
 prometheus-client==0.7.1
@@ -76,11 +85,13 @@ ptyprocess==0.6.0
 py==1.8.0
 Pygments==2.4.2
 pyLDAvis==2.1.2
+pylint==2.4.3
 pyparsing==2.4.2
 pyrsistent==0.15.4
 pytest==5.1.2
 python-dateutil==2.8.0
 pytz==2019.2
+PyYAML==5.1.2
 pyzmq==18.1.0
 qtconsole==4.5.5
 requests==2.22.0
@@ -101,6 +112,7 @@ toml==0.10.0
 tornado==6.0.3
 tqdm==4.35.0
 traitlets==4.3.2
+typed-ast==1.4.0
 urllib3==1.25.3
 wasabi==0.2.2
 wcwidth==0.1.7
@@ -108,5 +120,5 @@ webencodings==0.5.1
 Werkzeug==0.15.5
 widgetsnbextension==3.5.1
 wordcloud==1.5.0
+wrapt==1.11.2
 zipp==0.6.0
-https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.1.0/en_core_web_sm-2.1.0.tar.gz#egg=en_core_web_sm==2.1.0
