--- a/.deployignore
+++ b/.deployignore
@@ -1,3 +1,7 @@
 # these apps are ignored for deployment
+dash-image-processing
+dash-mapd-demo
 dash-salesforce-crm
+dash-windstreaming
+dashr-alignment-viewer
 dashr-salesforce-crm
