--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,17 @@ jobs:
           name: Set up git config
           command: git config credential.helper "/bin/bash /home/circleci/helper-script.sh"
       - run:
+          name: Install curl
+          command: |
+            sudo apt update
+            sudo apt install -y -qq curl
+      - run:
+          name: Install dds-client
+          comamdn: |
+            curl -sSL -o dds-client.tgz https://github.com/plotly/dds-client/releases/download/v0.1.0/dds-client_0.1.0_linux_x86_64.tgz
+            tar xzf dds-client.tgz -C /usr/local/bin
+            chmod +x /usr/local/bin/dds-client
+      - run:
           name: Deploy
           command: |
             APPS_MODIFIED=$(git diff origin/master origin/$CIRCLE_BRANCH --dirstat=files,1 apps/ | awk '{ split($2,a,"/"); if (length(a[2]) != 0) { print a[2]} } ' | sort -u)
@@ -63,6 +74,17 @@ jobs:
       - run:
           name: Set up git config
           command: git config credential.helper "/bin/bash /home/circleci/helper-script.sh"
+      - run:
+          name: Install curl
+          command: |
+            sudo apt update
+            sudo apt install -y -qq curl
+      - run:
+          name: Install dds-client
+          comamdn: |
+            curl -sSL -o dds-client.tgz https://github.com/plotly/dds-client/releases/download/v0.1.0/dds-client_0.1.0_linux_x86_64.tgz
+            tar xzf dds-client.tgz -C /usr/local/bin
+            chmod +x /usr/local/bin/dds-client
       - run:
           name: Deploy
           command: |
