--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,10 @@ jobs:
           command: printf '#!/bin/bash\necho username=$PLAYGROUND_DEPLOY_USERNAME\necho password=$PLAYGROUND_DEPLOY_PASSWORD' >> /home/circleci/helper-script.sh
       - run:
           name: Set up git config
-          command: git config --global credential.helper "/bin/bash /home/circleci/helper-script.sh"
+          command: |
+            git config --global credential.helper "/bin/bash /home/circleci/helper-script.sh"
+            git config --global user.email '<>' # Leave email blank
+            git config --global user.name "Circle MonoRepo Automatic Deployer"
       - run:
           name: Install curl
           command: |
@@ -53,9 +56,6 @@ jobs:
                   exit 0
             fi
 
-            git config --global user.email '<>' # Leave email blank
-            git config --global user.name "Circle MonoRepo Automatic Deployer"
-
             for APP in $APPS_MODIFIED
             do
               CREATE_APP=true DASH_ENTERPRISE_URL="$DASH_PLAYGROUND_ENTERPRISE_URL" DASH_ENTERPRISE_API_KEY="$DASH_PLAYGROUND_ENTERPRISE_API_KEY" PATH="$HOME/bin:$PATH" ./deploy "$APP"
@@ -74,7 +74,10 @@ jobs:
           command: printf '#!/bin/bash\necho username=$GALLERY_DEPLOY_USERNAME\necho password=$GALLERY_DEPLOY_PASSWORD' >> /home/circleci/helper-script.sh
       - run:
           name: Set up git config
-          command: git config --global credential.helper "/bin/bash /home/circleci/helper-script.sh"
+          command: |
+            git config --global credential.helper "/bin/bash /home/circleci/helper-script.sh"
+            git config --global user.email '<>' # Leave email blank
+            git config --global user.name "Circle MonoRepo Automatic Deployer"
       - run:
           name: Install curl
           command: |
@@ -96,9 +99,6 @@ jobs:
                   echo "No app change detected. Skipping the deploy.."
                   exit 0
             fi
-
-            git config --global user.email '<>' # Leave email blank
-            git config --global user.name "Circle MonoRepo Automatic Deployer"
 
             for APP in $APPS_MODIFIED
             do
