--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,38 @@
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
 vv/
-*.pyc
-*.DS_Store
+
+# Virtual environments
 venv/
+env/
+.venv/
+
+# IDE
 .idea/
-.DS_Store
-.Rproj.user
+.vscode/
 *.vscode*
+*.swp
+*.swo
+
+# OS
+.DS_Store
+*.DS_Store
+Thumbs.db
+
+# R
+.Rproj.user
+
+# Environment variables
+.env
+
+# Distribution
+dist/
+build/
+*.egg-info/
+*.egg
+
+# Node
+node_modules/
